--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^13.0.3",
     "next-auth": "^4.20.1",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "swr": "^1.3.0"
   },
