--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "base-64": "^1.0.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "maplibre-gl": "^3.0.1",
     "nanoid": "^4.0.0",
     "next": "^13.0.3",
     "next-auth": "^4.20.1",
