--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@liveblocks/client": "^1.0.11",
     "@liveblocks/node": "^1.0.11",
     "@liveblocks/react": "^1.0.11",
+    "@next/font": "13.0.3",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-select": "^1.1.1",
