--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "base-64": "^1.0.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "lodash": "^4.17.21",
     "maplibre-gl": "^3.0.1",
     "nanoid": "^4.0.0",
     "next": "^13.0.3",
@@ -30,12 +31,15 @@
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-resizable": "^3.0.5",
     "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/base-64": "^1.0.0",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-resizable": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
